# Improved-Kovaaks-Discord-RPC

./: Cargo.toml  README.md  build.rs
resources/: app.rc
src/: app.rs  main.rs  state.rs
src/backend/: autostart.rs  config.rs  discord_rpc.rs  kovaaks_utils.rs  local_scores.rs  mod.rs  online_api.rs  scenario_cache.rs
src/ui/: main_tab.rs  mod.rs  settings_tab.rs  theme.rs
src/workers/: mod.rs  monitoring.rs
