[package]
name = "KovaaksDiscordRPC"
version = "1.0.0"
edition = "2025"
description = "Discord Rich Presence for KovaaK's FPS Aim Trainer"
authors = ["SalziCantAim"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }

tray-icon = "0.19"

rfd = "0.15"

discord-rich-presence = "0.2"

reqwest = { version = "0.11", features = ["json", "blocking"] }

sysinfo = "0.30"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

winreg = "0.52"

csv = "1.3"
encoding_rs = "0.8"

dirs = "5.0"

notify = "6.1"
notify-debouncer-mini = "0.4"

parking_lot = "0.12"

image = { version = "0.25", default-features = false, features = ["ico", "png"] }

log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

